@@ -1,3 +1,8 @@
+2012-07-19 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V01-00-25
+	* std::thread in #ifdef linux block
+
 2012-07-10 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V01-00-24
